# atomview

./: .gitignore  .pre-commit-config.yaml  4jnc.cif  5hlt.cif  6qrd.cif  8azr.cif  LICENSE  README.md  dev.ipynb  justfile  pyproject.toml
.github/workflows/: deploy.yml  run_tests.yml
src/atomview/: __init__.py  constants.py  core.py  utils.py
tests/: __init__.py  test_core.py  test_fixture_structures.py  test_main.py  test_utils.py
tests/data/: 7m3z.cif  7z3m.cif  9m3y.cif
