[project]
name = "atomview"
version = "0.1.0"
description = "A lightweight molecular structure viewer for Biotite structures in Jupyter notebooks."
readme = "README.md"
authors = [{ name = "Charlie Harris", email = "charlieharris001@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "biotite>=1.5.0",
    "matplotlib>=3.10.8",
    "py3dmol>=2.5.3",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/cch1999/atomview"
Repository = "https://github.com/cch1999/atomview"
Issues = "https://github.com/cch1999/atomview/issues"

[project.optional-dependencies]
dev = [
    "interrogate>=1.7.0",
    "ipykernel>=7.1.0",
    "justfile>=0.0.1a0",
    "pre-commit>=3.0.0",
    "pytest>=7.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.1.0",
    "ty>=0.0.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.0.0",
]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "UP", "B", "BLE", "PL", "RUF"]
exclude = [
    "*.ipynb",
    "__pycache__",
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
]
